--- a/style.css
+++ b/style.css
@@ -309,7 +309,11 @@ body {
 
 /* about */
 .block{
-  margin-bottom:12px;
+  margin-bottom:30px;
   width: 100%;
   text-align: left;
+}
+
+.padding-left{
+  padding-left:35px;
 }
