--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* base: efbc22 */
 
-/* @import url(http://fonts.googleapis.com/css?family=Lato); */
+@import url(https://fonts.googleapis.com/css?family=Lato);
 @font-face {
   font-family: 'BellMT';
-  src: url("http://localhost:8000/fonts/Belleza-Regular.ttf");
+  src: url("/fonts/Belleza-Regular.ttf");
 }
 
 body {
