--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @font-face {
   font-family: 'BellMT';
-  src: url("/fonts/Belleza-Regular.ttf");
+  /* src: url("/fonts/Belleza-Regular.ttf"); */
 }
 
 body {
@@ -40,7 +40,7 @@ body {
   justify-content: center;
   text-align: center;
   pointer-events: none;
-  font-family: BellMT;
+  /* font-family: BellMT; */
 }
 
 .top h1, .catch h1 {
@@ -347,11 +347,11 @@ body {
 #box, #box2 {
   width: 100%;
   height: 200%;
+  /* background-color: transparent; */
   background-color: #efbc22;
   position: absolute;
   display: block;
   right: 0px;
-  /* bottom: -25%; */
   top: -50%;
   z-index: 200;
   border: 1px solid transparent;
