--- a/style.css
+++ b/style.css
@@ -344,11 +344,12 @@ body {
   overflow: hidden;
 }
 
+
 #box, #box2 {
   width: 100%;
   height: 200%;
-  /* background-color: transparent; */
-  background-color: #efbc22;
+  background-color: transparent;
+  /* background-color: #efbc22; */
   position: absolute;
   display: block;
   right: 0px;
@@ -357,6 +358,11 @@ body {
   border: 1px solid transparent;
   border-radius: 2000px / 5000px;
 }
+
+.normal #box, .normal #box2{
+  background-color: #efbc22;
+}
+
 
 #box2 {
   right: 0;
